src/objects/Form_Data_Element__c.object
<CustomObject>
    <fields>
        <fullName>FDF_Field__c</fullName>
        <label>FDF Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Order__c</fullName>
        <label>Field Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Design__c</fullName>
        <label>Form Design</label>
        <referenceTo>Form_Design__c</referenceTo>
        <relationshipLabel>Form Data Elements</relationshipLabel>
        <relationshipName>Form_Data_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesForce_Field__c</fullName>
        <label>SalesForce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Form Data Element</label>
    <nameField>
        <label>Form Data Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Data Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>